# aviutl2_gcmzdrops2

./: .gitattributes  .gitignore  .gitmodules  API.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LUA.md  README.md  build.bash  installer.iss.in
.github/: RELEASE_TEMPLATE.md
.github/workflows/: releaser.yml  test-build.yml
src/c/: CMakeLists.txt  analyze.c  analyze.h  analyze_meta.c  analyze_meta.h  analyze_test.c  api.c  api.h  api_test.c  aviutl2.c  aviutl2.h  aviutl2_addr.ini  config.c  config.h  config_dialog.c  config_dialog.h  config_dialog.rc  config_dialog_combo_tooltip.c  config_dialog_combo_tooltip.h  config_dialog_test.c  config_dialog_tooltip.c  config_dialog_tooltip.h  config_test.c  copy.c  copy.h  copy_test.c  dataobj.c  dataobj.h  dataobj_stream.c  dataobj_stream.h  dataobj_stream_test.c  dataobj_test.c  datauri.c  datauri.h  datauri_test.c  delayed_cleanup.c  delayed_cleanup.h  delayed_cleanup_test.c  dllmain.c  do.c  (+70 more)
src/c/aviutl2_sdk_c/: aviutl2_filter2.h  aviutl2_input2.h  aviutl2_logger2.h  aviutl2_module2.h  aviutl2_output2.h  aviutl2_plugin2.h
src/c/test_data/: test_cleanup_module.c  test_🌙.lua  test_🌙_module.c  test_🌙_module.def
src/c/test_data/exo/: 1-dest.object  1-src.exo  2-dest.object  2-src.exo
src/c/test_data/ini_reader/: basic.ini  complex.ini  empty_section.ini  utf8_bom.ini
src/c/test_data/ini_sign/: test_basic.ini  test_no_updated_at.ini
src/c/test_data/style_config/: base_config.conf  custom_style.conf  default_style.conf  integer_base_config.conf  integer_override_config.conf  invalid_integers.conf  malformed_colors.conf  override_config.conf  rgba_style.conf
src/cmake/: installer.cmake  public_key.cmake  version.cmake
src/i18n/: finish.bash  ja.po.DO_NOT_EDIT  start.bash  zh_CN.po.DO_NOT_EDIT
src/img/: icon16.af  icon32.af
src/lua/: entrypoint.lua  exo.lua  ini.lua
